NVL-49-Delete an export
