# public/swagger.yaml
@@ -371,6 +371,27 @@ paths:
           $ref: '#/components/responses/InvalidParams'
         401:
           $ref: '#/components/responses/Unauthorized'
+  '/exports/{id}':
+    parameters:
+      - name: id
+        in: path
+        description: ID of product to return
+        required: true
+        schema:
+          type: integer
+          format: int64
+          example: 1
+    delete:
+      tags:
+        - Export
+      summary: Delete Export by id
+      responses:
+        204:
+          description: successful
+        404:
+          $ref: '#/components/responses/NotFound'
+        401:
+          $ref: '#/components/responses/Unauthorized'
   /exports:
     post:
       tags:
